--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -27,6 +27,7 @@
   - [1563. 石子游戏](#1563-石子游戏)
 - [背包问题系列](#背包问题系列)
   - [416. 分割等和子集](#416-分割等和子集)
+  - [1049. 最后一块石头的重量II](#1049-最后一块石头的重量ii)
 - [Others](#others)
   - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
@@ -249,7 +250,7 @@ public:
 };
 ```
 - 其他方法： 利用动态规划方法，大幅减少搜索空间
-  - `dp[i][j]`定义i个数构成目标值j的组合数量
+  - `dp[i][j]`**定义i个数构成目标值j的组合数量** (与01背包问题相似)
   - 状态转移方程：`dp[i][j] = dp[i-1][j-nums[i]] + dp[i-1][j+nums[i]]`
     - 初始化比较复杂： 由于j- nums[i]可能出现负值，因此需要将遍历空间调大： 增大到`[0,2*sum+1)`的范围；
     - 同时**初始化最开始的元素取值**：
@@ -335,10 +336,15 @@ public:
 
 - **更优雅的解法**
   - 将数组进行转换， 将计算目标转换为 `(target + sum) / 2`, 只用考虑加法运算即可
+    - 定义数组元素之和为`Sum`， 构成S的方程中，加法部分的结果为X, 那么被减的数之和为`sum-x`: X- (sum - x) = S; 即`X = (target + sum) / 2`
+    - $a_1 + a_2 - (a_3 + a_4) =sum$
+    - 那么X**即为01背包问题中背包的总重量**
   - 本质仍然是 0/1背包问题
-  - 定义当前值的组合数 `dp[j]`  转换方程为：`dp[j] = \sum(dp[j-nums[i]])`
+  - 定义当前值的组合数 `dp[j]`  转换方程为：`dp[j] += (dp[j-nums[i]])`
+    - 二维形式为： 描述前i个元素构成目标和为j的个数`dp[i][j] = dp[i-1][j] + dp[i-1][j-nums[i]]`
+    - 形式比标准01背包问题更简单
   - 注意遍历顺序
-
+- 关键点: **问题转换**  **1d01背包问题**
 ```c++
 class Solution {
 public:
@@ -553,7 +559,7 @@ public:
 - 计算最大差值，如下所示一次遍历，记录当前最小值并计算差值。
 - 时间复杂度O(n) 空间复杂度O(1)
 
-```
+```c++
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
@@ -650,7 +656,7 @@ public:
     - 第二次买
     - 第二次卖
     - 每次取最大值
-```
+```c++
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
@@ -674,13 +680,14 @@ public:
   - 每轮交易状态的更新与上面一致
 
 
-```
+```c++
 class Solution {
 public:
     int maxProfit(int k, vector<int>& prices) {
         vector<int> buy (k + 1, INT_MIN);
         vector<int> sell (k+1);
         for (auto p : prices) {
+            // 遍历范围设置
             for (int i = 1; i <= k; i++) {
                 buy[i] = max(buy[i], sell[i - 1] -p);
                 sell[i] = max(sell[i], buy[i] + p);
@@ -698,7 +705,7 @@ public:
   - 为了对冷冻期进行处理，即避免sell后里面进行交易，所以就需要**对其中的sell数据更新做延迟，延迟一天更新即可**
   - 因此取临时变量lock，取sell更新前的值
 
-```
+```c++
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
@@ -708,7 +715,7 @@ public:
         for (auto p : prices) {
             int buynow = max(buy, lock - p);
             int sellnow = max(sell, buy + p);
-            lock = sell;
+            lock = sell; // 变量延迟赋值
             sell = sellnow;
             buy = buynow;
         }
@@ -721,7 +728,7 @@ public:
 - 与309一致，添加了一些小限制，只需要在基本的操作上添加逻辑即可
   - 把手续费加入buy/sell的更新计算中，由于sell中`buy+p` 会有溢出bug，还是加在buy的操作中
 
-```
+```c++
 class Solution {
 public:
     int maxProfit(vector<int>& prices, int fee) {
@@ -750,7 +757,8 @@ public:
   - `dp[0]=a[0];dp[1]=max(a[0],a[1])`
 - 时间复杂度O(N) 空间复杂度O(n)
 
-```class Solution {
+```c++
+class Solution {
 public:
     int rob(vector<int>& nums) {
         if(nums.size()==0){return 0;}
@@ -773,13 +781,14 @@ public:
 
 - **通过滚动数组压缩空间：仅用两个变量来记录即可**，在状态更新过程中进行变量移动更新，将空间复杂度压缩至O(1)
 
-```class Solution {
+```c++
+class Solution {
 public:
     int rob(vector<int>& nums) {
         if(nums.size()==0){return 0;}
         
-        int odd=nums[0];
-        int even=odd;
+        int odd=nums[0]; // 
+        int even=odd;    // 临时代码
 
         for(int i=1;i<nums.size();i++){
             if(i<=1){
@@ -834,6 +843,7 @@ public:
 - 在树结构下的，**状态转移考虑根节点与左右子树的关系**：
   - 当前root节点： `dp[r][0] = max(dp[left][0], dp[left][1]) + max(dp[right][0], dp[right][1])`
   - `dp[r][1] = root -> val +  dp[right][0] + dp[left][0])`
+  - 使用结构体来整体记录**偷与不偷**的结果
 - 根据问题定义，整个遍历应该采用自底而上的方式，即后序遍历
 - 时间复杂度 O(N) (后序遍历的时间) 空间复杂度 O(N)
 
@@ -894,7 +904,7 @@ public:
 };
 ```
 - 滚动数组操作压缩空间：
-  - 根据数据依赖关系，直接取一列数据即可，因为内外循环的设计方法，不存在覆盖问题，相对来说改动较小
+  - 根据数据依赖关系，直接取一列数据即可，**因为内外循环的设计方法，不存在覆盖问题**，相对来说改动较小
 
 ```c++
 class Solution {
@@ -926,8 +936,8 @@ public:
 假设亚历克斯和李都发挥出最佳水平，当亚历克斯赢得比赛时返回 true ，当李赢得比赛时返回 false 
 
 - 与[LC486.预测赢家]相比，多了两个关键的条件：
-  - 数组的长度是偶数；
-  - 数组的元素之和是奇数，所以没有平局
+  - **数组的长度是偶数**；
+  - **数组的元素之和是奇数，所以没有平局**
 - 在以上的限制下，**存在先手优势，即先选的玩家一定能获胜**：
   - 将石子分成两组之后，可以计算出每一组的石子数量，同时知道哪一组的石子数量更多。\text{Alex}Alex 只要选择取走数量更多的一组石子即可。因此，先选的玩家总是可以赢得比赛
 
@@ -1021,6 +1031,12 @@ public:
 
 ## 背包问题系列
 - https://leetcode-cn.com/problems/partition-equal-subset-sum/solution/bang-ni-ba-0-1bei-bao-xue-ge-tong-tou-by-px33/
+- 01背包问题：
+  - 关键要素： 背包总重量， 物品价值、物品重量； 每个物品只能放一次 
+  - 二维dp： `dp[i][j]` 前i个物品放入总重为j的包中的最大价值
+    - `dp[i][j] = max(dp[i-1][j] , dp[i-1][j-w[i]] + v[i])`
+  - 一维滚动数组形式：
+    - `dp[j] = max(dp[j], dp[j-w[i]] + v[i])`
 ### 416. 分割等和子集
 > 一个 只包含正整数 的 非空 数组 nums 。请你判断是否可以将这个数组分割成两个子集，使得两个子集的元素和相等
 
@@ -1103,10 +1119,46 @@ public:
 };
 ```
 
+### 1049. 最后一块石头的重量II
+> 有一堆石头，每块石头的重量都是正整数。
+
+> 每一回合，从中选出任意两块石头，然后将它们一起粉碎。假设石头的重量分别为 x 和 y，且 x <= y。那么粉碎的可能结果如下：
+
+> 如果 x == y，那么两块石头都会被完全粉碎；
+如果 x != y，那么重量为 x 的石头将会完全粉碎，而重量为 y 的石头新重量为 y-x。
+最后，最多只会剩下一块石头。返回此石头最小的可能重量。如果没有石头剩下，就返回 0
+
+- 问题分析： 关键是让石头分成重量相同的两堆， 相撞之后剩下的石头最小
+  - 设置： 通过背包问题计算`sum/2`的背包最多能装多重的石头：
+    - `target  = sum / 2` `dp[target]`
+    - `ans = (sum - dp[target]) - dp[target]` 最后结果就是两堆石头的差值
+  - 与[LC416.分割等和子集]做法基本相似
+- 状态转移公式： `dp[j] = max(dp[j], dp[j-stones[i]] + stones[i])`
+```c++
+class Solution {
+public:
+    int lastStoneWeightII(vector<int>& stones) {
+        vector<int> dp(15001, 0); // 
+        int sum = 0;
+        for (auto p : stones) {
+            sum += p;
+        }
+        int n = stones.size();
+        int target = sum / 2; // 背包总重量
+        for (int i = 0; i < n; i++) {
+            for (int j = target; j >= stones[i]; j--) {
+                dp[j] = max(dp[j], dp[j - stones[i]] + stones[i]);
+            }
+        }
+        return sum - dp[target] - dp[target];
+    }
+};
+```
+
 ## Others
 
 ### 10. 正则表达式 [Hard *]
-> 给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+> 给你一个**字符串 s 和一个字符规律 p**，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
 '.' 匹配任意单个字符
 '*' 匹配零个或多个前面的那一个元素
 所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
@@ -1123,7 +1175,7 @@ public:
 class Solution {
 public:
     bool isMatch(string s, string p) {
-        s = " " + s;
+        s = " " + s;  // 有效避免空字符串的对比问题
         p = " " + p; // 防止 c* 或者 /n 的情况
         int m = s.size();
         int n = p.size();
@@ -1131,7 +1183,8 @@ public:
         dp[0][0] = 1;
         for (int i = 1; i <= m; i++) {
             for (int j = 1; j <= n; j++) {
-                // 
+                // 注意索引-1的情况 dp和实际string的索引有差
+                // 单个字符匹配
                 if (s[i - 1] == p[j - 1] || p[j - 1] == '.') {
                     dp[i][j] = dp[i - 1][j - 1];
                 }
@@ -1140,9 +1193,10 @@ public:
                     if (p[j - 2] != s[i - 1] && p[j - 2] != '.') {
                         dp[i][j] = dp[i][j - 2];
                     }
-                    else {
+                    // 多次匹配
+                    else { // p[j-2] == s[i-1] or p[j-2] == '.' 
                         // dp[i][j-2] : 无法匹配
-                        // dp[i][j-1] : 匹配1个
+                        // dp[i][j-1] : 匹配1个
                         // dp[i-1][j] : 匹配多个a （s串）
                         dp[i][j] = dp[i][j - 2] || dp[i - 1][j] || dp[i][j - 1]; 
                     }
@@ -1155,15 +1209,14 @@ public:
 ```
 
 ### 55. 跳跃游戏 [Medium]
-- 判断是否可达
-- 可以通过贪心的思路进行处理
-- 计算最大路径，**需要判断当前位置是否可达**即`i<=maxStep`
+- **判断是否可达**
+  - 可以通过**贪心的思路**进行处理
+  - 计算最大路径，**需要判断当前位置是否可达**即 `i<=maxStep`
 
-```
+```c++
 class Solution {
 public:
     bool canJump(vector<int>& nums) {
-        
         if (nums.size() <= 1)
             return true;
         int maxStep = nums[0];
@@ -1172,17 +1225,20 @@ public:
                 maxStep = max(nums[i] + i, maxStep);
             }
         }
-        return maxStep >= nums.size() - 1;
-        
+        return maxStep >= nums.size() - 1;   
     }
 };
 ```
+
 ### 45. 跳跃游戏 II  [贪心]
-> 数组中的每个元素代表你在该位置可以跳跃的最大长度。你的目标是**使用最少的跳跃次数到达数组的最后一个位置**
+> 数组中的每个元素代表你在该位置可以跳跃的最大长度。
+> 你的目标是**使用最少的跳跃次数到达数组的最后一个位置**
 
-- 基于dp的思路，时间复杂度 O(N^2) 空间复杂度O(N)
+- 基于dp的思路:
+  - 时间复杂度 $O(N^2)$
+  - 空间复杂度 $O(N)$
 
-```
+```c++
 class Solution {
 public:
     int jump(vector<int>& nums) {
@@ -1199,14 +1255,14 @@ public:
 };
 ```
 
-- 本题本质上还是典型的**贪心算法**，可以通过贪心的思路来提高效率
+- 本题本质上还是典型的**贪心算法**，可以**通过贪心的思路来提高效率**
     - 记录当前位置的最大可达边界，当**当前位置越过之前最大边界时即需要跳跃**
-    - step++
+    - **step++**
     - end记录前一个最大边界，初始化为0；
-    -  maxposition维护当前的最大边界
+    - `maxposition` **维护当前的最大边界**
   - 时间复杂度 O(N) 空间复杂度O(1)
 
-```
+```c++
 class Solution {
 public:
     int jump(vector<int>& nums) {
@@ -1215,10 +1271,10 @@ public:
         int steps = 0;
         int maxPosition = 0; // 最大可大边界
         for (int i = 0; i < length - 1; i++) {
-            //cout << dp[i] << endl;
-            maxPosition = max(maxPosition, nums[i] + i); // 更新当前最大可达边界
+            // 更新当前最大可达边界
+            maxPosition = max(maxPosition, nums[i] + i); 
             if (i == end) {
-                // 当到达前一个边界时， 需要进行跳跃更新
+            // 当到达前一个边界时， 需要进行跳跃更新
                 end = maxPosition;
                 steps++;
             }
@@ -1230,9 +1286,9 @@ public:
 
 ### 62. 不同路径 [Medium]
 - 经典的dp任务： **给出矩形，计算到达右下角的路径数量**
-  - O(MN)
+  - $O(MN)$
   - `dp[i][j] = dp[i-1][j] + dp[i][j-1]`
-```
+```c++
 class Solution {
 public:
     int uniquePaths(int m, int n) {
@@ -1259,10 +1315,10 @@ public:
 
 
 ### 63. 不同路径 2
-- 在上面的基础上，增加障碍物品, dp时跳过障碍点
-- 使用滚动数组的方式来减少dp表的内存占用
+- 在上面的基础上，**增加障碍物品, dp时跳过障碍点**
+- 使用**滚动数组**的方式来减少dp表的内存占用
 - 时间复杂度 `O(mn)` 空间复杂度`O(n)`
-```
+```c++
 class Solution {
 public:
     int uniquePathsWithObstacles(vector<vector<int>>& obstacleGrid) {
@@ -1296,7 +1352,7 @@ public:
 - dp方法的基础，**状态转移公式**： `dp[i] = min (dp[i - r_k]) + 1`
 - **初始化**： 
   - **dp[0] = 0**
-  - **其他元素初始为`amount + 1`**, 直接初始化为最大值，会在计算最小值chubug
+  - **其他元素初始为`amount + 1`**, 直接初始化为最大值，会在**计算最小值出bug**
 - 时间复杂度 O(nS) 空间复杂度 O(n)
 - 关键点： **`状态初始化小技巧`**
 ```c++
@@ -1314,16 +1370,10 @@ public:
                     dp[i] = min(dp[i], dp[i - coin] + 1);
                 }
             }
-           // dp[i] = tmp;
         }
-        // for (auto s : dp) {
-        //     cout << s << " ";
-        // }
-        // cout << endl;
         if (dp[amount] == amount + 1)
             return -1;
         return dp[amount];
-
     }
 };
 ```
@@ -1339,7 +1389,7 @@ public:
     - 一种是**只用前k-1个硬币就凑齐了**，
     - 一种是**前面已经凑到了i-coins[k]**，现在就差第k个硬币了。
 - 注意初始化dp[k][0]为1
-- 下面的内外循环顺序可以交换，结果不变
+- 下面的**内外循环顺序可以交换**，结果不变
 ```c++
 class Solution {
 public:
@@ -1662,15 +1712,22 @@ https://www.it610.com/article/1176869420593655808.htm
 
 
 ### 91. 解码方法 [Medium]
+>一条包含字母 A-Z 的消息通过以下映射进行了编码, 请计算并返回解码方法的总数
+
+
 - 将数字串解码为字符串
-- **并没有单独 '0' 所对应的解码，只有 '10'、'20' 可以解码为字符串**。
-- 提示中还有包含前导零的说明, 并非所给的字符串都可以解码
+  - **并没有单独 '0' 所对应的解码，只有 '10'、'20' 可以解码为字符串**。
+  - 提示中还有包含前导零的说明, 并非所给的字符串都可以解码
+
+
 - 基于动态规划解题，利用上面提到的限制
 - **dp[i] 表示前i个字符可以构成的字符串数量**
-    - dp[i] = dp[i - 1] + dp[i-2]
-    - dp[i] = dp[i - 2]
+    - `dp[i] = dp[i - 1] + dp[i-2]` : 11~19 21~26
+    - dp[i] = dp[i - 2] : , `10 / 20`
+    - `dp[i]= dp[i-1]` :   `xy`超过26
     - 初始化： dp[0] = 1 dp[1] = 1
-- 临界情况处理： 字符串首字符为0， 非法字符
+- 临界情况处理： 
+  - **字符串首字符为0， 非法字符**
 
 
 
@@ -1714,7 +1771,7 @@ public:
 ```
 - 将dp数组优化掉: 状态转移中仅依赖前两个值，直接动态更新这两个值即可
 
-```
+```c++
 class Solution {
 public:
     int numDecodings(string s) {
@@ -1751,7 +1808,7 @@ public:
 ```
 
 ### 剑指46. 把数字翻译成字符串
-- 与上一题是相似的，限制条件变少
+- 与[LC91.解码方法]是相似的，限制条件变少
 - **dp[i] 表示前i个字符可以构成的字符串数量**
 - 限制当前值要在10~25之间
 ```
@@ -1788,7 +1845,7 @@ public:
   - 初始化： 将dp[i][0]/ dp[0][j]初始化
   - 时间复杂度 O（N^2） 空间复杂度 O(N^2)
 - 关键技巧： **`原位dp  空间压缩`**
-```
+```c++
 class Solution {
 public:
     int minPathSum(vector<vector<int>>& grid) {
@@ -1924,7 +1981,7 @@ coins =  3*1*5    +   3*5*8   +  1*3*8  + 1*8*1 = 167
   - **初始化**：构造[n+2][n+2]的存储矩阵，并设置临时数组[n+2]来存储气球的值
   - **遍历方向**： 由于dp转移公式中，(i,j)设置到(i,k) (k,j)的dp值，因此需要从下而上递减的遍历，**外层递减，内层递增**
 - 时间复杂度O(N^3) 空间复杂度O(N^2)
-- 关键点： **`dp定义的范围`** **`遍历方向`**
+- 关键点： **`dp定义的范围`** **`遍历方向`** **`初始化 n+2 的设计`**
 ```c++
 class Solution {
 public:
@@ -1963,7 +2020,7 @@ public:
 
 - 基本做法： 动态规划：
   - dp[i] 定义正整数i的拆分最大乘积
-  - dp[i] = max(dp[i], j*dp[j - i], j *(i - j))
+  - `dp[i] = max(dp[i], j*dp[j - i], j *(i - j))`
 - 时间复杂度  O(N^2) 空间复杂度 O(N)
 - 关键点： **`dp公式`**  **`数学方法`**
 
@@ -1986,6 +2043,14 @@ public:
 ```
 - 数学方法: **最优拆分方案中 数字为1/2/3,数学可证全为3是最优的结果**
 - 时间复杂度 O(1) 空间复杂度 O(1)
+- 数学证明：
+  - $n = \sum^a_1 n_i$ 
+  - $max(n_1 * n_2 * ... * n_a)$
+  - 当拆分数量确定时，当各拆分数字相等时，乘积最大：
+    - $x^a = x^{n/x} = (x\frac{1}{x})^n$ 
+    - 对$y = x\frac{1}{x}$ 进行求导： $x_0 = e$为极大值点
+    - 因子 必须为整数，最接近 e 的整数为 2 或 3 
+    - 实际上取3时，乘积最大
 ```c++
 class Solution {
 public:
@@ -2034,6 +2099,13 @@ public:
 
 ### 887. 鸡蛋掉落 [面试**]
 >  k 枚相同的鸡蛋，并可以使用一栋从第 1 层到第 n 层共有 n 层楼的建筑。已知存在楼层 f ，满足 0 <= f <= n ，任何从 高于 f 的楼层落下的鸡蛋都会碎，从 f 楼层或比它低的楼层落下的鸡蛋都不会破. 请你计算并返回要确定 **f 确切的值** 的 **最小操作次数** 是多少.
+
+- 基础动态规划做法：
+  - 定义dp[k][N]: k个鸡蛋对N个楼层进行测试的最小操作次数
+    - `dp[k][N] = min(res, max(dp[k-1][i-1]， dp[k][N-i]))`
+    - i从1开始遍历到N
+      - 当鸡蛋碎了： 向下搜索： dp[k-1][i-1]; 对`i-1`层楼进行搜索
+      - 当鸡蛋没有碎： 向上搜索： `dp[k][N-i]` 对 `N-i`层楼进行搜索
 
 - **逆向思维** 将问题进行转换：
 N 和 F 的关系
