--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -52,7 +52,7 @@
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
   - [468. 验证IP地址](#468-验证ip地址)
   - [767. 重构字符串](#767-重构字符串)
-  - [340. 至少包含K个不同字符的最长子串](#340-至少包含k个不同字符的最长子串)
+  - [340. 至多包含K个不同字符的最长子串](#340-至多包含k个不同字符的最长子串)
   - [1044. 最长重复子串*](#1044-最长重复子串)
 
 <!-- /code_chunk_output -->
@@ -1388,7 +1388,6 @@ public:
         }
         return s.substr(left + 1, right - left - 1);
     }
-
 };
 ```
 
@@ -1585,7 +1584,7 @@ public:
                 cut[i] = 0;
             }
             else {
-                cut[i] = cut[i - 1] + 1;
+                cut[i] = cut[i - 1] + 1; // 
                 for (int j = 1; j < i; j++) {
                     if (dp[j][i]) {
                         cut[i] = min(cut[i], cut[j - 1] + 1);
@@ -2568,7 +2567,7 @@ public:
     }
 };
 ```
-### 340. 至少包含K个不同字符的最长子串
+### 340. 至多包含K个不同字符的最长子串
 > 给定一个字符串 s ，找出 至多 包含 k 个不同字符的最长子串 T。
 ```
 输入: s = "eceba", k = 2
@@ -2624,6 +2623,7 @@ public:
 class Solution {
 public:
     long modules = 1e9 + 7;
+    // 冲突检查
     bool check(vector<int> nums, int beg1, int beg2, int L) {
         for (int i = beg1, j =beg2; i < beg1 + L; i++, j++) {
             if (nums[i] != nums[j]) {
