--- a/topics/T2-字符串匹配问题.md
+++ b/topics/T2-字符串匹配问题.md
@@ -134,7 +134,7 @@ public:
 ### 28. 实现strStr() 子串匹配查找 *
 
 - **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
-- 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
+- 常见面试题，需要深入了解并记住该原理，**可以动态规划求解**：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
 - 字符串匹配算法：还有Sunday 匹配机制相对比较简单： 
 
 ```c++
@@ -350,11 +350,11 @@ public:
 > 给定三个字符串 s1、s2、s3，请你帮忙验证 s3 是否是由 s1 和 s2 交错组成的。
 
 - 多个字符串交叉匹配的问题；
-- 使用双指针无法解决，存在局部非最优的情况
+- **使用双指针无法解决，存在局部非最优的情况**
 - 实际上还是要靠dp大法解决：
   - 状态定义： `dp[i][j]` 表示s1前i个元素和s2前j个元素可以交错地构成s3的前`i+j`个元素
   - 状态转移： `dp[i][j] = (dp[i-1][j] && s3[i+j-1]==s1[i-1]) | (dp[i][j-1] && s3[i+j-1]==s2[j-1])`
-  - 一点细节： 定义为`[n+1][m+1]` 在遍历中也要考虑判断`i>0/j>0`
+  - 一点细节： 定义为`[n+1][m+1]` **在遍历中也要考虑判断`i>0/j>0`**
 
 ```c++
 class Solution {
@@ -379,10 +379,7 @@ public:
                 }
             }
         }
-
         return dp[n][m];
-
-
     }
 };
 ```
