--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -37,6 +37,7 @@
   - [647.  回文子串](#647--回文子串)
   - [139. 单词拆分](#139-单词拆分)
   - [516. 最长回文子序列](#516-最长回文子序列)
+  - [5809. 长度为3的不同回文子序列 [周赛]](#5809-长度为3的不同回文子序列-周赛)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
 - [综合问题](#综合问题)
@@ -1775,7 +1776,91 @@ public:
 };
 ```
 
-
+### 5809. 长度为3的不同回文子序列 [周赛]
+> 给你一个字符串 s ，返回 s 中 长度为 3 **的不同回文子序列** 的个数。
+- 二分法搜索寻找当前在区间内的数据
+  - 首先记录下每个字母的所有出现位置，然后我们枚举可能的回文子序列ABA中的A和B。
+  - 确定A和B之后，我们需要在A的左端点和右端点之间查找B
+- 时间复杂度 O(N + logN^2)
+```c++
+class Solution {
+public:
+    int my_upper_bound(vector<int> arrs, int target) {
+        int left = 0;
+        int right = arrs.size() - 1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (arrs[mid] <= target) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return left;
+    }
+    int countPalindromicSubsequence(string s) {
+        vector<vector<int>> ks(26);
+        int n = s.size();
+        int ans = 0;
+        for (int i = 0; i < n; i++) {
+            ks[s[i] - 'a'].push_back(i);
+        }
+        for (int i = 0; i < 26; i++) {
+            if (ks[i].size() >= 2) {
+                int l = ks[i][0];
+                int r = ks[i].back();
+                for (int j = 0; j < 26; j++) {
+                    //auto t = may_upper_bound(ks[j].begin(), ks[j].end(), l);
+                    int t = my_upper_bound(ks[j], l);
+                    if (t < ks[j].size() && ks[j][t] < r) {
+                        ans++;
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+- 采用两端字符遍历，搜索中间字符的方法：
+  - 遍历26个字母，找到第一个和最后一个出现当前字母的位置
+  - 搜索中间子串中出现的字符数量，即为当前组合的回文串数量
+- 时间复杂度 O(NK + K^2) 
+- 空间复杂度 O(K)
+```c++
+class Solution {
+public:
+    int countPalindromicSubsequence(string s) {
+        vector<vector<int>> ks(26);
+        int n = s.size();
+        int ans = 0;
+        for (int i = 0; i < 26; i++) {
+            char ch = i + 'a';
+            int l = 0;
+            int r = n - 1;
+            // 搜索第一个出现ch的位置
+            while (l < n && s[l] != ch) {
+                l++;
+            }
+             // 搜索最后一个出现ch的位置
+            while (r >= 0 && s[r] != ch) {
+                r--;
+            }
+            if (r - l < 2) {
+                continue;
+            }
+            unordered_set<char> ls;
+            for (int j = l + 1; j < r; j++) {
+                ls.insert(s[j]);
+            }
+            // 统计中间子串的个数，即确定中间数量
+            ans += ls.size();
+        }
+        return ans;
+    }
+};
+```
 
 ## 字符串转换问题
 
@@ -1920,6 +2005,32 @@ public:
                 right++;
             }
             ans = max(ans, right - i);
+        }
+        return ans;
+    }
+};
+```
+- 代码优化
+
+```c++
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        int n = s.size();
+        unordered_set<int> seen;
+        int right = 0;
+        int left = 0;
+        int ans = 0;
+        while (right < n) {
+            if (left != 0) {
+                seen.erase(s[left-1]);
+            }
+            while (right < n && !seen.count(s[right])) {
+                seen.insert(s[right]);
+                right++;
+            }
+            ans = max(ans, (int)seen.size());
+            left++;
         }
         return ans;
     }
