--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -56,6 +56,7 @@
   - [449. 序列化和反序列化二叉搜索树](#449-序列化和反序列化二叉搜索树)
   - [530. 二叉搜索树的最小绝对差](#530-二叉搜索树的最小绝对差)
   - [654. 最大二叉树](#654-最大二叉树)
+  - [5810. 合并多棵二叉搜索树](#5810-合并多棵二叉搜索树)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
@@ -1590,6 +1591,74 @@ public:
     }
     TreeNode* constructMaximumBinaryTree(vector<int>& nums) {
         return build(nums, 0, nums.size() - 1);
+    }
+};
+```
+
+### 5810. 合并多棵二叉搜索树
+> n 个 二叉搜索树的根节点 ，存储在数组 trees 中（下标从 0 开始），对应 n 棵不同的二叉搜索树。trees 中的每棵二叉搜索树 最多有 3 个节点 ，且不存在值相同的两个根节点。
+在一步操作中，将会完成下述步骤：
+选择两个 不同的 下标 i 和 j ，要求满足在 trees[i] 中的某个 叶节点 的值等于 trees[j] 的 根节点的值 。
+用 trees[j] 替换 trees[i] 中的那个叶节点。
+从 trees 中移除 trees[j] 。
+
+- **模拟合并过程即可**，最后需要对合并得到的二叉树进行合法性检验
+  - 合并过程： 
+    - 记录子节点对应的根节点指针(哈希表)
+    - 对所有树进行遍历，检查当前根节点是否出现在其他树的叶子节点种
+      - 若存在则进行指针移动合并操作
+      - 若不存在，则记录当前根节点，有可能为最后合并后的树的根节点
+  - 检查过程：
+    - 检查是否满足二叉搜索树性质
+    - 检查树的节点数量是否减少了`n-1`，合并过程相当于删除n-1个节点
+
+```c++
+class Solution {
+public:
+    int cnt = 0;
+    bool check(TreeNode* root, int low, int high) {
+        if (!root) return true;
+        cnt++;
+        if (root -> val <= low || root -> val >= high) {
+            return false;
+        }
+        return check(root -> left, low, root -> val) && check(root -> right, root -> val, high);
+    }
+    TreeNode* canMerge(vector<TreeNode*>& trees) {
+        unordered_map<int, TreeNode*> mps;
+        int nodes = 0;
+        for (auto p : trees) {
+            nodes++;
+            if (p -> left) {
+                mps[p -> left -> val] = p;
+                nodes++;
+            }
+            if (p -> right) {
+                mps[p -> right -> val] = p;
+                nodes++;
+            }
+        }
+        TreeNode* root = nullptr;
+         
+        for (auto p : trees) {
+            if (mps.count(p -> val)) {
+                TreeNode* cur = mps[p -> val];
+                if (cur -> val < p -> val) {
+                    cur -> right = p;
+                }
+                else {
+                    cur -> left = p;
+                }
+            }
+            else {
+                // 有两棵树没有被合并
+               if (root) return nullptr;
+               root = p;
+            }
+        }
+        if (check(root, INT_MIN, INT_MAX) && (nodes + 1 - trees.size()) == cnt)
+            return root;
+        return nullptr;
     }
 };
 ```
