--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -38,6 +38,7 @@
   - [139. 单词拆分](#139-单词拆分)
   - [516. 最长回文子序列](#516-最长回文子序列)
   - [5809. 长度为3的不同回文子序列 [周赛]](#5809-长度为3的不同回文子序列-周赛)
+  - [564. 寻找最近的回文数](#564-寻找最近的回文数)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
 - [综合问题](#综合问题)
@@ -1861,6 +1862,57 @@ public:
     }
 };
 ```
+
+### 564. 寻找最近的回文数
+> 给定一个整数 n ，**你需要找到与它最近的回文数（不包括自身）**。
+“最近的”定义为两个整数差的绝对值最小。
+
+- 需要进行分类讨论：总体三种情况：
+  - 取高位一半left: -1
+  - left + 1
+  - left 
+  - 并对后面的部分进行reverse，拼接对比选取best result
+- 其中需要考虑-1或者+1后，位数的变化：
+  - 如`xx0-1` `xx9+1` 这种情况下在翻转合并操作中需要复杂的判断
+  - 因此，特地分出三种情况：
+    - `N < 10 || N = 10^(num-1)` 100000的情况
+    - `N == 10^(num) - 1` 99999情况
+    - `N == 10^(num - 1) + 1` 100001的情况 
+- 总体看还需要注意当target等于N的时候，选取差值最近的小值即可
+```c++
+class Solution {
+public:
+    string nearestPalindromic(string n) {
+        int num = n.size();
+        string ans;
+        long long N = stoll(n);
+        if (N  < 10 || N == pow(10, num - 1)) return to_string(N - 1); // 1000
+        if (N == pow(10, num - 1) + 1) return to_string(N - 2); // 11
+        if (N == pow(10, num) - 1) return to_string(N + 2); // 9xx
+        long long left = stoll(n.substr(0, (num + 1) / 2));
+        vector<long long> cand;
+        for (int i : {-1, 0 , 1}) {
+            string p = to_string(left + i);
+            // 如果是奇数 则往前移一位
+            string pp = p + string(p.rbegin() + (num & 1), p.rend());
+            cand.push_back(stoll(pp));
+        }
+        sort(cand.begin(), cand.end());
+        long long pre = INT_MAX;
+        for (auto& p : cand) {
+            if (p == N) {
+                continue;
+            }
+            if (abs(p - N) < pre) {
+                pre = abs(p - N);
+                ans = to_string(p);
+            }
+        }
+        return ans;    
+    }
+};
+```
+
 
 ## 字符串转换问题
 
