--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -2485,11 +2485,11 @@ public:
 - **单调栈做法**
 - 解题模板：https://leetcode-cn.com/problems/remove-k-digits/solution/yi-zhao-chi-bian-li-kou-si-dao-ti-ma-ma-zai-ye-b-5/
   - 从左到右遍历，对于每一个遍历到的元素，我们决定是丢弃还是保留
-  - 丢弃相邻位置上大的元素，使用单调递增栈进行数据组织
+  - 丢弃相邻位置上大的元素，使用**单调递增栈**进行数据组织
 - 时间复杂度O(N) 
 - 最后**处理临界情况**： 当全部字符都被移除的情况； 计算剩余字符串长度，从栈中取出
 - 关键点： **`单调栈构造`**
-```
+```c++
 class Solution {
 public:
     string removeKdigits(string num, int k) {
