[topic] add seq

--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -371,7 +371,7 @@ public:
 
 ## 子序和问题
 ### 53. 最大子序和 *
-> 给定一个整数数组 nums ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+> 给定一个整数数组 nums ，找到一个具有最大和的**连续子数组**（子数组最少包含一个元素），返回其最大和。
 > 
 - 动态规划求解 **学习掌握这种节省空间的变量管理写法**
     - f(i)=max{f(i-1)+ai,ai} 状态转移公式 f(i)即表示以第i个数字结尾的子序列的最大值
