--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -29,6 +29,7 @@
   - [459. 重复的子字符串](#459-重复的子字符串)
   - [796. 旋转字符串](#796-旋转字符串)
   - [97. 交错字符串](#97-交错字符串)
+  - [115. 不同的子序列](#115-不同的子序列)
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
@@ -1350,6 +1351,103 @@ public:
 };
 ```
 
+### 115. 不同的子序列
+> 给定一个字符串 s 和一个字符串 t ，**计算在 s 的子序列中 t 出现的个数**
+> 字符串的一个 子序列 是指，通过删除一些（也可以不删除）字符且不干扰剩余字符相对位置所组成的新字符串。
+
+```
+输入：s = "rabbbit", t = "rabbit"
+输出：3
+```
+- 子序列为非连续的字符子串，可以通过动态规划的方式来进行求解：
+  - 定义`dp[i][j]`  s串以i-1结尾的子序列和t串以j-1结尾的子序列匹配(子串匹配)的数量
+  - 如果`s[i-1] == t[j-1]` 则`dp[i][j] = dp[i-1][j-1] + dp[i-1][j]` 
+    - `dp[i-1][j]`即以子串`s[i-1]`之前的串与t串进行匹配
+  - 如果`s[i-1] ！= t[j-1]` 则`dp[i][j] = dp[i-1][j]` 
+- 初始化： `dp[i][0] = 1` `dp[0][0] = 1`
+- 关键点： **`动态规划分析`**
+```c++
+class Solution {
+public:
+    int numDistinct(string s, string t) {
+        int n = s.size();
+        int m = t.size();
+        int end = n;
+        vector<vector<long long >> dp(n + 1, vector<long long>(m+1, 0));
+
+        for (int i = 0; i <= n; i++) dp[i][0] = 1;
+        
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                if (s[i-1] == t[j-1]) {  
+                    dp[i][j] = (dp[i-1][j] + dp[i-1][j-1]) % INT_MAX;
+                }
+                else {
+                    dp[i][j] = dp[i-1][j] % INT_MAX;
+                }
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+
+
+- 基于dfs的记忆化搜索，通过所有案例，但超时了。。。
+- 从本质上理解： 动态规划是不会重复计算的递归搜索
+```c++
+class Solution {
+public:
+    vector<vector<int>> dp;
+    int backTrack(string s, int beg, int end, string target, int index) {
+        //cout << "beg" << beg << "end:" << end << "index " << index << endl;
+        if (index == target.size()) {
+            return 1;
+        }
+        if (beg > end || index > target.size()) {
+            return 0;
+        }
+        if (dp[beg][index] != -1) {
+            return dp[beg][index];
+        }
+        int ans = 0;
+        for (int k = beg; k <= end; k++) {
+            if (s[k] != target[index]) {
+                continue;
+            }
+            else {
+                if (dp[k + 1][index + 1] == -1)
+                    dp[k+1][index+1] = backTrack(s, k + 1, end, target, index + 1);
+                ans += dp[k+1][index+1];
+            }
+        }
+        return ans;
+    }
+    int numDistinct(string s, string t) {
+        int n = s.size();
+        int m = t.size();
+        int end = n;
+        dp = vector<vector<int>>(n + 1, vector<int>(m+1, -1));
+        for (int i = n - 1; i >= 0; i--) {
+            if (s[i] == t.back()) {
+                end = n - 1;
+            }
+        }
+        if (end == n) {
+            return 0;
+        }
+        int ans = 0;
+        for (int i = 0; i < n; i++) {
+            if (s[i] == t[0]) {
+                ans+=backTrack(s, i, end, t, 0);
+                break;
+            }
+        }
+        return ans;
+    }
+};
+```
+
 ## 回文串
 
 回文串yyds， 真滴有啥用呢？  
@@ -2511,7 +2609,6 @@ public:
             ans.push_back(st[i]);
             flag = true;
         }
-        
         return ans.empty() ? "0" : ans;
     }
 };
