[topics] subseq update

--- a/topics/T9-子序列问题.md
+++ b/topics/T9-子序列问题.md
@@ -1,4 +1,30 @@
+- [子序列问题](#子序列问题)
+  - [392. 判断子序列](#392-判断子序列)
+  - [115. 不同的子序列](#115-不同的子序列)
+  - [583. 两个字符串的删除操作](#583-两个字符串的删除操作)
+  - [300. 最长上升子序列 (LIS)](#300-最长上升子序列-lis)
+  - [674. 最长连续递增序列](#674-最长连续递增序列)
+  - [1143. 最长公共子序列 *](#1143-最长公共子序列-)
+  - [1035. 不相交的线](#1035-不相交的线)
+  - [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
+  - [516. 最长回文子序列](#516-最长回文子序列)
+  - [718. 最长重复子数组](#718-最长重复子数组)
+  - [补充： 最小编辑代价 [ByteDance]](#补充-最小编辑代价-bytedance)
 
+
+## 子序列问题
+- 数组或者字符串的子序列问题，是一类常见的中等难度的题目
+- 区别与连续子串，**子序列元素仅保留了数组本来元素的序列关系，不一定存在连续特性**。
+- 下面汇总的题目总体上都可以通过动态规划进行求解，且求解方法基本一致
+- 从题目描述可以看到求解目标基本为：
+  - 最长XXX子序列, 计算序列长度
+  - 子序列数量， 计算满足条件的序列数量
+- 从动态规划定义上将，基本可以用以下两种定义来实现：
+  - `dp[i][j]` 表示`s[:i]` `t[:j]`的目标情况
+    - dp遍历往往内外循环正向即可
+  - `dp[i][j]` 表示 `s[i:]` `t[:j]`两串的目标情况或者`i~j`之间的目标情况
+    - dp遍历往往采用外反内正的循环逻辑
+    - 如： [LC516.最长回文子序列]
 ### 392. 判断子序列
 > 给定字符串 s 和 t ，判断 s 是否为 t 的子序列。
 > 字符串的一个子序列是原始字符串删除一些（也可以不删除）字符而不改变剩余字符相对位置形成的新字符串。（例如，"ace"是"abcde"的一个子序列，而"aec"不是）。
@@ -156,6 +182,83 @@ public:
 
 
 
+
+### 583. 两个字符串的删除操作
+> 给定两个单词 word1 和 word2，找到使得 word1 和 word2 相同所需的最小步数，**每步可以删除任意一个字符串中的一个字符**。
+
+```
+输入: "sea", "eat"
+输出: 2
+解释: 第一步将"sea"变为"ea"，第二步将"eat"变为"ea"
+```
+- 分析： 仍然可以采用动态规划进行求解：
+  - 与前面的题目中dp定义相似
+  - `dp[i][j]`表示 word1前i个元素和word2前j个元素相同所需的最小步数
+    - `word1[i-1]==word2[j-1]` 当word1第i个元素和word2第j个元素相同时，所需的最小步数为 `dp[i][j] = dp[i-1][j-1]`
+    - `word1[i-1]!=word2[j-1]` 当word1第i个元素和word2第j个元素相同时，所需的最小步数 `dp[i][j] = min(dp[i-1][j-1] + 2, dp[i-1][j] + 1, dp[i][j-1] + 1)`
+  - 初始化：
+
+```c++
+class Solution {
+public:
+    int minDistance(string word1, string word2) {
+        int n = word1.size();
+        int m = word2.size();
+        vector<vector<int>> dp(n + 1 ,vector<int>(m + 1));
+        // init dp[i][0] = i
+        for (int i = 0; i <= n; i++) {
+            dp[i][0] = i;
+        }
+        for (int i = 0; i <= m; i++) {
+            dp[0][i] = i;
+        }
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                if (word1[i-1] == word2[j-1]) {
+                    dp[i][j] = dp[i-1][j-1];
+                }
+                else {
+                    dp[i][j] = min(dp[i-1][j-1] + 2, min(dp[i-1][j] + 1, dp[i][j - 1] + 1));
+                }
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+- 空间优化，使用滚动数组进行结果存储，这里使用辅助数组进行当前结果存储，使得代码可读性更好
+
+```c++
+class Solution {
+public:
+    int minDistance(string word1, string word2) {
+        int n = word1.size();
+        int m = word2.size();
+        vector<int> dp(m + 1);
+        for (int i = 0; i <= m; i++) {
+            dp[i] = i;
+        }
+        for (int i = 1; i <= n; i++) {
+            
+            vector<int> temp(m + 1);
+            temp[0] = i;
+            for (int j = 1; j <= m; j++) {
+                if (word1[i-1] == word2[j-1]) {
+                    temp[j] = dp[j-1];
+                }
+                else {
+                    temp[j] = min(dp[j-1] + 2, min(dp[j] + 1, temp[j - 1] + 1));
+                }
+            }
+            dp = temp; // extra array for temp
+        }
+        return dp[m];
+    }
+};
+```
+
+
+
 ### 300. 最长上升子序列 (LIS)
 - 基础DP思路
   - 状态转移公式 `dp[i]=max(dp[j])+1,其中0≤j<i且num[j]<num[i]`
@@ -286,6 +389,164 @@ public:
 ```
 
 
+
+
+
+### 1035. 不相交的线
+> 两条独立的水平线上按给定的顺序写下 nums1 和 nums2 中的整数。
+现在，可以绘制一些连接两个数字 nums1[i] 和 nums2[j] 的直线，这些直线需要同时满足满足：`nums1[i] == nums2[j]`且绘制的直线不与任何其他连线（非水平线）相交。 返回可以绘制的最大连线数
+
+
+```
+输入：nums1 = [1,4,2], nums2 = [1,2,4]
+输出：2
+```
+- 问题分析： 最大连线数即需要得到两个数组的最长公共子序列，即两侧的元素都相等(满足不相交定义)
+- 那么问题即为[LC1143. 最长公共子序列]问题
+- 直接进行dp求解即可
+
+```c++
+class Solution {
+public:
+    int maxUncrossedLines(vector<int>& nums1, vector<int>& nums2) {
+        int n = nums1.size();
+        int m = nums2.size();
+        vector<vector<int>> dp(n + 1, vector<int>(m + 1));
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                if (nums1[i - 1] == nums2[j - 1]) {
+                    dp[i][j] = dp[i - 1][j - 1] + 1;
+                }
+                else {
+                    dp[i][j] = max(dp[i - 1][j], dp[i][j - 1]);
+                }
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+### 72. 编辑距离 *[Hard]*
+> 给你两个单词 word1 和 word2，请你计算出将 word1 转换成 word2 所使用的最少操作数 
+> 
+- 动态规划解题
+- 定义`dp[i][j]`表示把**word1的前i个字母替换为word2的前j个字母**的最少操作数量
+  - 那么动态规划的转移方程为;
+  -  `dp[i][j] = min(dp[i-1][j] + 1, dp[i][j-1] + 1, dp[i-1][j-1] + (w1[i]!=w2[j])`
+  -  初始化： `dp[i][0] = i`
+  -  根据dp定义，那么我们应该初始化[m+1][n+1]的二维数组，返回dp[m][n]作为最终结果
+- 对于特殊情况，即其中一个word为空时，编辑距离为非空word的长度
+- 尤其要注意索引的设置
+  - 取字符串内元素的索引和dp的索引
+- 时间复杂度O(N^2) 空间复杂度O(N^2)
+```c++
+class Solution {
+public:
+    int minDistance(string word1, string word2) {
+        int l1 = word1.size();
+        int l2 = word2.size();
+        if (word1.empty())
+            return l2;
+        if (word2.empty())
+            return l1;
+        vector<vector<int>> dp(l1 + 1, vector<int>(l2 + 1));
+        for (int i = 1; i< l1 + 1; i++) {
+            dp[i][0] = i;
+        }
+        for (int i = 1; i< l2 + 1; i++) {
+            dp[0][i] = i;
+        }
+        for (int i = 1; i < l1 + 1; i++) {
+            for (int j = 1; j< l2 + 1; j++) {
+                int tmp = 1;
+                // 对于字符串取值，需要注意索引的差异
+                if (word1[i-1] == word2[j-1])
+                    tmp = 0;
+                dp[i][j] = min(dp[i-1][j] + 1, min(dp[i][j-1] + 1, dp[i-1][j-1] + tmp));
+            }
+        }
+        return dp[l1][l2];
+    }
+};
+```
+- 进一步优化空间使用，dp问题的常见优化，将二维数组变为一维数组
+  - 使用一维数组记录当前行的情况，在遍历的同时进行更新
+  - 代码易读性大幅下降
+
+```c++
+class Solution {
+public:
+    int minDistance(string word1, string word2) {
+        int l1 = word1.size();
+        int l2 = word2.size();
+        int prev = 0;
+        if (word1.empty())
+            return l2;
+        if (word2.empty())
+            return l1;
+        vector<int> dp((l2 + 1));
+        for (int i = 0; i < l2 + 1; i++) {
+            dp[i] = i;// dp[i][j]
+        }
+
+        for (int i = 1; i < l1 + 1; i++) {
+            prev = dp[0]; // dp[i-1][j-1]
+            dp[0] = i; // dp[i-1][0] 更新dp赋值
+            for (int j = 1; j < l2 + 1; j++) {
+                // dp[i][j] = dp[i-1][j] dp[i][j-1]
+                // 提前存储上一行的状态，避免被覆盖
+                int tmp = dp[j];
+                dp[j] = min(dp[j] + 1, min(dp[j-1] + 1, prev + int(word1[i-1] != word2[j-1])));
+                prev = tmp;
+            }
+        }
+        return dp.back();
+    }
+};
+```
+
+### 516. 最长回文子序列
+
+> 给定一个字符串 s ，找到其中最长的回文子序列，并返回该序列的长度。可以假设 s 的最大长度为 1000 。
+```
+输入:
+"bbbab"
+输出:
+4  (bbbb)
+```
+- 注意：**这里是子序列，而不是子串，子串是元素连续的**。
+- 无法直接采用[LC5.最长回文子串]中简洁的双指针方法
+- 需要借助动态规划进行解题
+    - dp状态定义： `dp[i][j]` 表示从i元素到j元素之间的最长子序列
+    - 状态转移： 
+      - `dp[i][j] = dp[i+1][j-1] + 2, if s[i] == s[j]`
+      - `dp[i][j] = max(dp[i+1][j], dp[i][j-1]), otherwise` 对比左右两边的长度
+    - 特殊情况： 对于长度为1的字符串的处理， 通过对`dp[i][i]`进行初始化即可
+  - 遍历方向： **需要保证左下右方向的结果提前计算处理**，因此要在外层进行反方向遍历，在内循环正常从i + 1开始遍历，从下往上得到最终结果
+- 关键点： **`dp初始化`**  **`遍历方向`**
+```c++
+class Solution {
+public:
+    int longestPalindromeSubseq(string s) {
+        int n = s.size();
+        vector<vector<int>> dp (n, vector<int> (n));
+        for (int i = n - 1; i >= 0; i--) { 
+            dp[i][i] = 1; //  处理长度为1的特殊情况
+            for (int j = i + 1; j < n; j++) {
+                if (s[i] == s[j]) {
+                    dp[i][j] = dp[i + 1][j - 1] + 2; // 注意转移公式
+                }
+                else {
+                    dp[i][j] = max(dp[i][j-1], dp[i+1][j]);
+                }
+            }
+        }
+        return dp[0][n-1]; // 
+    }
+};
+```
+
+
 ### 718. 最长重复子数组
 > 给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
 
@@ -347,7 +608,7 @@ public:
 
 - **动态规划**解法
   - 定义`dp[i][j]` 表示A数组以i开始和B数组以j开始的子串的最大公共长度；
-  - dp[i][j] = dp[i+1][j+1] + 1 if dp[i] == dp[j]; otherwise dp[i][j] = 0;
+  - `dp[i][j] = dp[i+1][j+1] + 1 if dp[i] == dp[j]`; otherwise dp[i][j] = 0;
   - 最终结果为dp数组中的最大值
 - 时间复杂度 `O(M*N)` 空间复杂度 `O(M*N)`
 ```c++
@@ -375,3 +636,31 @@ public:
     }
 };
 ```
+
+### 补充： 最小编辑代价 [ByteDance]
+在编辑距离上的改动：
+> 给定两个字符串str1和str2，再给定三个整数ic，dc，rc，**分别代表插入、删除、替换一个字符的代价**，返回将str1编辑成str2的最小代价。
+
+- 编辑距离问题中没有涉及到不同方式的代价，都是1；
+- 修改状态转移公式： `dp[i][j] = min(dp[i][j-1] + ic,  dp[i-1][j] + dc, dp[i-1][j-1] /  dp[i-1][j-1] + rc)`
+  - 当`str1[i]!=str[j]` 时， 从str1[i] 转移到 str2[j]需要把[i]/[j]进行替换，所以加上的时rc 
+  - 其他ic / dc都是**ß本质上考察对状态转移公式的理解**
+  - 状态初始化： `dp[0][j] = ic*j`   `dp[i][0] = dc*i`   
+https://www.it610.com/article/1176869420593655808.htm
+
+```
+1.dp[0][0]表示空串编辑成空串，故dp[0][0]=0;
+
+2.求第一行dp[0][j]，空串编辑成str2[0….j-1]，则dp[0][j]=ic*j;
+
+3.求第一列dp[i][0]，str1[0……i-1]编辑成空串，则dp[i][0]=dc*i;
+
+4.求dp[i][j]，即str1[0….i-1]编辑成str2[0…..j-1]，四种可能的途径：
+
+<1>str1[0….i-1]先编辑成str2[0…..j-2]，再由str2[0…..j-2]到str2[0…..j-1]，即dp[i][j-1]+ic;
+
+<2>str1[0….i-1]先编辑成str1[0…..i-2]，再由str1[0…..i-2]到str2[0…..j-1]，即dc+dp[i-1][j];
+
+<3>如果str1[i-1]==str2[j-1],则dp[i][j]=dp[i-1][j-1];
+```
+
