--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -39,6 +39,7 @@
   - [349. 两个数组的交集](#349-两个数组的交集)
   - [350. 两个数组的交集II](#350-两个数组的交集ii)
   - [977. 有序数组的平方](#977-有序数组的平方)
+  - [611. 有效三角形的个数](#611-有效三角形的个数)
 - [哈希表技巧](#哈希表技巧)
   - [1. 两数之和](#1-两数之和)
   - [36. 有效的数独](#36-有效的数独)
@@ -1667,6 +1668,54 @@ public:
     }
 };
 ```
+### 611. 有效三角形的个数
+> 给定一个包含非负整数的数组，你的任务是统计其中可以组成三角形三条边的三元组个数
+
+```
+输入: [2,2,3,4]
+输出: 3
+解释:
+有效的组合是: 
+2,3,4 (使用第一个 2)
+2,3,4 (使用第二个 2)
+2,2,3
+```
+- 有效三角形即满足三角不等关系：
+  - `a + b < c ` `|a - b| < c`
+- 我们可以先通过排序，得到有序的数组
+  - **有序数组可以保证两边之差小于第三边**
+- 在有序数组基础上，再去确保两边之和大于第三边即可
+  - 使用双指针，进行两数之和搜索，对于满足条件的两数之和，直接计算左右差值，即可得到对于当前的第三边，满足条件的其他两边的数量
+  - `right - left`
+
+- 时间复杂度 O(N^2) 空间复杂度 O(logN)
+- 关键点 **`排序 + 逆序遍历 + 双指针 + 解空间确定`**
+
+```c++
+class Solution {
+public:
+    int triangleNumber(vector<int>& nums) {
+        int cnt = 0;
+        int n = nums.size();
+        sort(nums.begin(), nums.end());
+        for (int i = n - 1;i >= 2; i--) {
+            int l = 0;
+            int r = i - 1;
+            while (l < r) {
+                if (nums[l] + nums[r] > nums[i]) {
+                    cnt += (r - l); // 说明该边与后面的所有边都能构成三角形
+                    r--;
+                }
+                else {
+                    l++;
+                }
+            }
+        }
+        return cnt;
+    }
+};
+```
+
 ## 哈希表技巧
 ### 1. 两数之和
 给定数组和目标，找出数组两元素之和为target的元素索引
