--- a/topics/T7-二叉搜索树.md
+++ b/topics/T7-二叉搜索树.md
@@ -132,6 +132,36 @@ public:
 ```
 ## 二叉搜索树性质的利用
 - 主要利用**二叉搜索树的中序遍历有序性以及root left right的有序关系**进行问题求解和优化
+### 96. 不同的二叉搜索树
+> 给你一个整数 n ，求恰由 n 个节点组成且节点值从 1 到 n 互不相同的 二叉搜索树 有多少种？返回满足题意的二叉搜索树的种数。
+
+- 进行分类排列：
+  - 考虑左子树、根和右子树的节点分配：对于4个节点
+  - 那么分配比例可以是： 
+```
+0 1 3
+1 1 2
+2 1 1
+3 1 0
+```
+   - `dp[n] = `$\sum_{0} dp[i] * dp[n-i-1]$
+   - `dp[0] = 1, dp[1] = 1`
+```c++
+class Solution {
+public:
+    int numTrees(int n) {
+        vector<int> dp(n + 1);
+        dp[0] = 1;
+        dp[1] = 1;
+        for (int i = 2; i <=n ; i++) {
+            for (int j = 0; j < i; j++) {
+                dp[i] += (dp[j] * dp[i - j - 1]);
+            }
+        }
+        return dp[n];
+    }
+};
+```
 
 ### 98. 验证二叉搜索树 [*]
 
